--- a/amobile/iphone11.html
+++ b/amobile/iphone11.html
@@ -9,7 +9,7 @@
     <link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d7bc18a32d.js" crossorigin="anonymous"></script>
     <title>Croma</title>
-    <link rel="stylesheet" href="products.css">
+    <link rel="stylesheet" href="product.css">
     <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
     <script src="https://kit.fontawesome.com/511a6cb386.js" crossorigin="anonymous"></script>
