--- a/landing.html/oneplus bullets.html
+++ b/landing.html/oneplus bullets.html
@@ -102,20 +102,16 @@
                     <div id="arrow"><i class="fas fa-angle-up"></i></div>
 
                     <div class="imagepreview1">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605269941/Croma%20Assets/Communication/Mobiles/Images/8999510638622.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637933045/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242300_pnmjdi.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview2">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1617602382/Croma%20Assets/Communication/Mobiles/Images/229927_2_fwnn42.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1632393493/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242300_1_exsayb.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview3">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1614578891/Croma%20Assets/Communication/Mobiles/Images/229927_3_rscfsq.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1632393492/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242300_2_quby8j.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview4">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605269937/Croma%20Assets/Communication/Mobiles/Images/8999517585438.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1635844875/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242300_3_yyzekp.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div id="arrow"><i class="fas fa-angle-down"></i></div>
                 </div>
@@ -130,8 +126,7 @@
                 </div>
                 <div id="image">
                     <div>
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605269941/Croma%20Assets/Communication/Mobiles/Images/8999510638622.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637933045/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242300_pnmjdi.png/mxw_1125,f_auto" alt="">
                     </div>
                 </div>
                 <!-- bottom part of the image -->
@@ -158,9 +153,8 @@
             </div>
             <div class="productdiscription">
                 <div>
-                    <h1>OnePlus Bullets Wireless Z Bass Edition In-Ear Wireless Earphone with Mic (Bluetooth 5.0, Quick
-                        Switch, 5481100067, Bold
-                        Black)</h1>
+                    <h1>OnePlus Bullets Wireless Z Bass Edition In-Ear Wireless Earphone with Mic (Bluetooth 5.0, Quick Switch, 5481100067, Bold
+                    Black)</h1>
                 </div>
                 <!-- rating part -->
                 <div id="productid">
