--- a/landing.html/airpods.html
+++ b/landing.html/airpods.html
@@ -102,20 +102,16 @@
                     <div id="arrow"><i class="fas fa-angle-up"></i></div>
 
                     <div class="imagepreview1">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605269941/Croma%20Assets/Communication/Mobiles/Images/8999510638622.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605170750/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/8937376841758.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview2">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1617602382/Croma%20Assets/Communication/Mobiles/Images/229927_2_fwnn42.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605170751/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/8937376808990.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview3">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1614578891/Croma%20Assets/Communication/Mobiles/Images/229927_3_rscfsq.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1618491377/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/222222_3_unuxuy.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview4">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605269937/Croma%20Assets/Communication/Mobiles/Images/8999517585438.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1618491378/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/222222_4_d9hqgr.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div id="arrow"><i class="fas fa-angle-down"></i></div>
                 </div>
@@ -130,7 +126,7 @@
                 </div>
                 <div id="image">
                     <div>
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605269941/Croma%20Assets/Communication/Mobiles/Images/8999510638622.png/mxw_1440,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605170750/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/8937376841758.png/mxw_1125,f_auto"
                             alt="">
                     </div>
                 </div>
@@ -158,14 +154,14 @@
             </div>
             <div class="productdiscription">
                 <div>
-                    <h1>OnePlus Bullets Wireless Z Bass Edition In-Ear Wireless Earphone with Mic (Bluetooth 5.0, Quick
-                        Switch, 5481100067, Bold
-                        Black)</h1>
+                    <h1>Apple Airpods Pro In-Ear Active Noise Cancellation Truly Wireless Earbuds with Mic (Bluetooth
+                        5.0, with Wireless
+                        Charging Case, MWP22HN/A, White)</h1>
                 </div>
                 <!-- rating part -->
                 <div id="productid">
                     <div>
-                        <h4>PRODUCT ID: 242300
+                        <h4>PRODUCT ID: 222222
                         </h4>
                     </div>
                     <div class="information">
@@ -182,8 +178,8 @@
                 <!-- end of rating -->
                 <!-- pricing -->
                 <div class="pricing">
-                    <h1>₹1,999.00 <span><span>MRP:
-                                ₹2,190.00</span>
+                    <h1>₹20,900.00 <span><span>MRP:
+                                ₹24,900.00</span>
                             (Inclusive of all taxes)
                         </span></h1>
                 </div>
