--- a/landing.html/phillips.html
+++ b/landing.html/phillips.html
@@ -102,20 +102,16 @@
                     <div id="arrow"><i class="fas fa-angle-up"></i></div>
 
                     <div class="imagepreview1">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605269941/Croma%20Assets/Communication/Mobiles/Images/8999510638622.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1633977153/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242883_czv27v.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview2">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1617602382/Croma%20Assets/Communication/Mobiles/Images/229927_2_fwnn42.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637650664/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242883_2_srox3l.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview3">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1614578891/Croma%20Assets/Communication/Mobiles/Images/229927_3_rscfsq.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1633977161/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242883_2_p7arcf.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview4">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605269937/Croma%20Assets/Communication/Mobiles/Images/8999517585438.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1633977131/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242883_1_xsbooc.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div id="arrow"><i class="fas fa-angle-down"></i></div>
                 </div>
@@ -130,8 +126,7 @@
                 </div>
                 <div id="image">
                     <div>
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605269941/Croma%20Assets/Communication/Mobiles/Images/8999510638622.png/mxw_1440,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1633977153/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242883_czv27v.png/mxw_1125,f_auto" alt="">
                     </div>
                 </div>
                 <!-- bottom part of the image -->
@@ -158,14 +153,12 @@
             </div>
             <div class="productdiscription">
                 <div>
-                    <h1>OnePlus Bullets Wireless Z Bass Edition In-Ear Wireless Earphone with Mic (Bluetooth 5.0, Quick
-                        Switch, 5481100067, Bold
-                        Black)</h1>
+                    <h1>Philips On-Ear Noise Isolation Wireless Headphone with Mic (Bluetooth 5.0, Bass Boost Button, TAH4205BK/00, Black)</h1>
                 </div>
                 <!-- rating part -->
                 <div id="productid">
                     <div>
-                        <h4>PRODUCT ID: 242300
+                        <h4>PRODUCT ID: 242883
                         </h4>
                     </div>
                     <div class="information">
@@ -182,8 +175,8 @@
                 <!-- end of rating -->
                 <!-- pricing -->
                 <div class="pricing">
-                    <h1>₹1,999.00 <span><span>MRP:
-                                ₹2,190.00</span>
+                    <h1>₹1,799.00 <span><span>MRP:
+                                ₹4,999.00</span>
                             (Inclusive of all taxes)
                         </span></h1>
                 </div>
