--- a/amobile/oneplus.html
+++ b/amobile/oneplus.html
@@ -102,16 +102,16 @@
                     <div id="arrow"><i class="fas fa-angle-up"></i></div>
 
                     <div class="imagepreview1">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1633977153/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242883_czv27v.png/mxw_1125,f_auto" alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1638446751/Croma%20Assets/Communication/Mobiles/Images/233912_biu7qr.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview2">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637650664/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242883_2_srox3l.png/mxw_1125,f_auto" alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1619764785/Croma%20Assets/Communication/Mobiles/Images/233912_3_qdhjs8.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview3">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1633977161/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242883_2_p7arcf.png/mxw_1125,f_auto" alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1619764789/Croma%20Assets/Communication/Mobiles/Images/233912_4_ioush3.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div class="imagepreview4">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1633977131/Croma%20Assets/Entertainment/Headphones%20and%20Earphones/Images/242883_1_xsbooc.png/mxw_1125,f_auto" alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1638446911/Croma%20Assets/Communication/Mobiles/Images/233912_3_nqhaj1.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div id="arrow"><i class="fas fa-angle-down"></i></div>
                 </div>
