--- a/landing.html/SonyBraviaX85J.html
+++ b/landing.html/SonyBraviaX85J.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/d7bc18a32d.js" crossorigin="anonymous"></script>
     <title>Croma</title>
     <link rel="stylesheet" href="product.css">
+    <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
     <script src="https://kit.fontawesome.com/511a6cb386.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"
@@ -90,12 +91,12 @@
             <h4><i class="fas fa-angle-right"></i></h4>
             <h4>LED TVs</h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>Full HD TVs</h4>
+            <h4>Android Smart TVs</h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>Treeview Classic 60 cm  (62 Inch) </h4>
+            <h4>Sony Bravia X85J 215cm (85 Inch) Ultra HD 4K LED Google Smart TV </h4>
         </div>
-<!-- 
-        <br>
+
+        <!-- <br>
         <br>
         <br>
         
@@ -109,11 +110,11 @@
                     <div id="arrow"><i class="fas fa-angle-up"></i></div>
 
                     <div class="imagepreview1">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637828425/Croma%20Assets/Entertainment/Television/Images/245647_hmh5p4.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1631711351/Croma%20Assets/Entertainment/Television/Images/242185_orjt0i.png/mxw_1366,s_webp,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview2">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637589289/Croma%20Assets/Entertainment/Television/Images/245647_1_pzdb4f.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1631711352/Croma%20Assets/Entertainment/Television/Images/242185_1_cjxbnz.png/mxw_1366,s_webp,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview3">
@@ -137,7 +138,7 @@
                 </div>
                 <div id="image">
                     <div>
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637828425/Croma%20Assets/Entertainment/Television/Images/245647_hmh5p4.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1631711351/Croma%20Assets/Entertainment/Television/Images/242185_orjt0i.png/mxw_1366,s_webp,f_auto"
                             alt="">
                     </div>
                 </div>
@@ -165,7 +166,7 @@
             </div>
             <div class="productdiscription">
                 <div>
-                    <h1>Treeview Classic 60 cm (23.6 Inches) HD Ready Flat Panel Standard TV (Multiple Picture Mode, IND2401AT, Black)</h1>
+                    <h1>Sony Bravia X85J 215cm (85 Inch) Ultra HD 4K LED Google Smart TV (Dolby Atmos & Alexa Compatibility, KD-85X85J, Black)</h1>
                 </div>
                 <!-- rating part -->
                 <div id="productid">
@@ -187,15 +188,15 @@
                 <!-- end of rating -->
                 <!-- pricing -->
                 <div class="pricing">
-                    <h1>₹8,490.00 <span><span>MRP:
-                                ₹10,900.00</span>
+                    <h1>₹488,490.00 <span><span>MRP:
+                                ₹510,900.00</span>
                             (Inclusive of all taxes)
                         </span></h1>
                 </div>
                 <!-- end of pricing -->
                 <div class="emi">
                     <div>
-                        <h3>From ₹1,349/mo.</h3>
+                        <h3>From ₹10,349/mo.</h3>
                     </div>
                     <div class="option">
                         <a href="">
