--- a/landing.html/iphone11.html
+++ b/landing.html/iphone11.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/d7bc18a32d.js" crossorigin="anonymous"></script>
     <title>Croma</title>
     <link rel="stylesheet" href="product.css">
+    <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
     <script src="https://kit.fontawesome.com/511a6cb386.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"
@@ -86,22 +87,14 @@
         <div class="pathbar">
             <h4>Croma</h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>Televisions </h4>
+            <h4>Phones & Wearables</h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>LED TVs</h4>
+            <h4>Mobile Phones</h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>Full HD TVs</h4>
+            <h4>iPhone</h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>Treeview Classic 60 cm  (62 Inch) </h4>
+            <h4>Apple iPhone 11 (64GB ROM, 4GB RAM, MHDF3HN/A, Purple)</h4>
         </div>
-<!-- 
-        <br>
-        <br>
-        <br>
-        
-        <br>
-        <br>
-        <br> -->
         <!-- this is the small window of image preview -->
         <div class="productdetails">
             <div class="imagepreview">
@@ -109,19 +102,19 @@
                     <div id="arrow"><i class="fas fa-angle-up"></i></div>
 
                     <div class="imagepreview1">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637828425/Croma%20Assets/Entertainment/Television/Images/245647_hmh5p4.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605264356/Croma%20Assets/Communication/Mobiles/Images/9001728606238.png/mxw_1440,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview2">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637589289/Croma%20Assets/Entertainment/Television/Images/245647_1_pzdb4f.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1617602389/Croma%20Assets/Communication/Mobiles/Images/230110_2_twlt04.png/mxw_1440,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview3">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037754/Croma%20Assets/Entertainment/Television/Images/246056_3_ul8n8d.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1614579548/Croma%20Assets/Communication/Mobiles/Images/230110_3_bg31gx.png/mxw_1440,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview4">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037755/Croma%20Assets/Entertainment/Television/Images/246056_5_ba4izu.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605264357/Croma%20Assets/Communication/Mobiles/Images/9001726050334.png/mxw_1440,f_auto"
                             alt="">
                     </div>
                     <div id="arrow"><i class="fas fa-angle-down"></i></div>
@@ -137,7 +130,7 @@
                 </div>
                 <div id="image">
                     <div>
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637828425/Croma%20Assets/Entertainment/Television/Images/245647_hmh5p4.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605264356/Croma%20Assets/Communication/Mobiles/Images/9001728606238.png/mxw_1440,f_auto"
                             alt="">
                     </div>
                 </div>
@@ -165,12 +158,12 @@
             </div>
             <div class="productdiscription">
                 <div>
-                    <h1>Treeview Classic 60 cm (23.6 Inches) HD Ready Flat Panel Standard TV (Multiple Picture Mode, IND2401AT, Black)</h1>
+                    <h1>Apple iPhone 11 (64GB ROM, 4GB RAM, MHDF3HN/A, Purple)</h1>
                 </div>
                 <!-- rating part -->
                 <div id="productid">
                     <div>
-                        <h4>PRODUCT ID: 229927
+                        <h4>PRODUCT ID: 230110
                         </h4>
                     </div>
                     <div class="information">
@@ -187,15 +180,17 @@
                 <!-- end of rating -->
                 <!-- pricing -->
                 <div class="pricing">
-                    <h1>₹8,490.00 <span><span>MRP:
-                                ₹10,900.00</span>
+                    <h1>₹49,900.00 <span><span>
+                        <!-- MRP: -->
+                                <!-- ₹24,900.00 -->
+                                </span>
                             (Inclusive of all taxes)
                         </span></h1>
                 </div>
                 <!-- end of pricing -->
                 <div class="emi">
                     <div>
-                        <h3>From ₹1,349/mo.</h3>
+                        <h3>From ₹2,349/mo.</h3>
                     </div>
                     <div class="option">
                         <a href="">
