--- a/landing.html/treeviewclassic copy.htm
+++ b/landing.html/treeviewclassic copy.htm
@@ -1,30 +1,3 @@
-<!-- var laptops = [
-    {
-        name:"Apple MacBook Air M1 Chip macOS Big Sur Laptop (8GB RAM, 256GB SSD, Apple M1 GPU, 33.78cm, MGN63HN/A, Space Grey)",
-        img:"https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1606585888/Croma%20Assets/Computers%20Peripherals/Laptop/Images/9009479057438.png/mxw_1440,f_auto",
-        id:"PRODUCT ID: 230955",
-        price:"₹84,990.00"
-    },
-    {
-        name:"Apple MacBook Pro 16 M1 Pro Chip macOS Monterey Laptop (16GB RAM, 1TB SSD, M1 GPU, 41.05cm, MK193HN/A, Space Grey)",
-        img:"https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1634724136/Croma%20Assets/Computers%20Peripherals/Laptop/Images/245227_uj3uci.png/mxw_1440,f_auto",
-        id:"PRODUCT ID: 245227",
-        price:"₹259,900.00"
-    },
-    {
-        name:"Apple MacBook Air (MGNE3HN/A) M1 Chip macOS Big Sur Laptop (8GB RAM, 512GB SSD, Apple M1 GPU, 33.78cm, Gold)",
-        img:"https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1606585908/Croma%20Assets/Computers%20Peripherals/Laptop/Images/9009479385118.png/mxw_1440,f_auto",
-        id:"PRODUCT ID: 230956",
-        price:"₹109,490.00"
-    },
-    {
-        name:"Apple MacBook Pro MWP52HN/A Core i5 10th Gen macOS Catalina Laptop (16 GB RAM, 1 TB SSD, Intel Iris Plus 645 Graphics, 33.78cm, Space Grey)",
-        img:"https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605340528/Croma%20Assets/Computers%20Peripherals/Laptop/Images/8935963787294.png/mxw_1125,f_auto",
-        id:"PRODUCT ID: 225876",
-        price:"₹175,490.00"
-    }
-]; -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -37,6 +10,7 @@
     <script src="https://kit.fontawesome.com/d7bc18a32d.js" crossorigin="anonymous"></script>
     <title>Croma</title>
     <link rel="stylesheet" href="product.css">
+    <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
     <script src="https://kit.fontawesome.com/511a6cb386.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"
@@ -113,14 +87,22 @@
         <div class="pathbar">
             <h4>Croma</h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>Phones & Wearables</h4>
+            <h4>Televisions </h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>Mobile Phones</h4>
+            <h4>LED TVs</h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>iPhone</h4>
+            <h4>Full HD TVs</h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>Apple iPhone 11 (64GB ROM, 4GB RAM, MHDF3HN/A, Purple)</h4>
+            <h4>Treeview Classic 60 cm  (62 Inch) </h4>
         </div>
+<!-- 
+        <br>
+        <br>
+        <br>
+        
+        <br>
+        <br>
+        <br> -->
         <!-- this is the small window of image preview -->
         <div class="productdetails">
             <div class="imagepreview">
@@ -128,19 +110,19 @@
                     <div id="arrow"><i class="fas fa-angle-up"></i></div>
 
                     <div class="imagepreview1">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605272155/Croma%20Assets/Communication/Mobiles/Images/8999513391134.png/mxw_1440,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637828425/Croma%20Assets/Entertainment/Television/Images/245647_hmh5p4.png/mxw_1366,s_webp,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview2">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1617602375/Croma%20Assets/Communication/Mobiles/Images/229920_2_hwxi2t.png/mxw_1440,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637589289/Croma%20Assets/Entertainment/Television/Images/245647_1_pzdb4f.png/mxw_1366,s_webp,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview3">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1617602375/Croma%20Assets/Communication/Mobiles/Images/229920_2_hwxi2t.png/mxw_1440,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037754/Croma%20Assets/Entertainment/Television/Images/246056_3_ul8n8d.png/mxw_1366,s_webp,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview4">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1605272165/Croma%20Assets/Communication/Mobiles/Images/8999516667934.png/mxw_1440,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037755/Croma%20Assets/Entertainment/Television/Images/246056_5_ba4izu.png/mxw_1366,s_webp,f_auto"
                             alt="">
                     </div>
                     <div id="arrow"><i class="fas fa-angle-down"></i></div>
@@ -156,12 +138,12 @@
                 </div>
                 <div id="image">
                     <div>
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1606585888/Croma%20Assets/Computers%20Peripherals/Laptop/Images/9009479057438.png/mxw_1440,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637828425/Croma%20Assets/Entertainment/Television/Images/245647_hmh5p4.png/mxw_1366,s_webp,f_auto"
                             alt="">
                     </div>
                 </div>
                 <!-- bottom part of the image -->
-                <div class=" imagefooter">
+                <div class="imagefooter">
                     <h4>
                         <div class="box"></div>
                     </h4>
@@ -184,13 +166,13 @@
             </div>
             <div class="productdiscription">
                 <div>
-                    <h1>Apple MacBook Air M1 Chip macOS Big Sur Laptop (8GB RAM, 256GB SSD, Apple M1 GPU, 33.78cm,
-                        MGN63HN/A, Space Grey)</h1>
+                    <h1>Treeview Classic 60 cm (23.6 Inches) HD Ready Flat Panel Standard TV (Multiple Picture Mode, IND2401AT, Black)</h1>
                 </div>
                 <!-- rating part -->
                 <div id="productid">
                     <div>
-                        <h4 id="ID">PRODUCT ID: 230955</h4>
+                        <h4>PRODUCT ID: 229927
+                        </h4>
                     </div>
                     <div class="information">
                         <i class="far fa-star"></i>
@@ -206,13 +188,15 @@
                 <!-- end of rating -->
                 <!-- pricing -->
                 <div class="pricing">
-                    <h1 class="pric">₹84,990.00 </h1><span class="str">MRP:₹65,900.00</span><span>(Inclusive of all
-                        taxes)</span>
+                    <h1>₹8,490.00 <span><span>MRP:
+                                ₹10,900.00</span>
+                            (Inclusive of all taxes)
+                        </span></h1>
                 </div>
                 <!-- end of pricing -->
                 <div class="emi">
                     <div>
-                        <h3>From ₹2,349/mo.</h3>
+                        <h3>From ₹1,349/mo.</h3>
                     </div>
                     <div class="option">
                         <a href="">
@@ -237,8 +221,7 @@
                 <!-- offers -->
                 <div id="offers">
                     <div class="offer1">
-                        <h3>No Cost EMI and additional cashback upto Rs.4,000 on HDFC Bank 6 month Credit card EMI.
-                            T&C
+                        <h3>No Cost EMI and additional cashback upto Rs.4,000 on HDFC Bank 6 month Credit card EMI. T&C
                             Apply.</h3>
                     </div>
                     <div class="offer2">
@@ -261,8 +244,7 @@
                         </div>
                         <div>
                             <h3>
-                                Rs 500 Flat discount on Tx of 10,000 & above with ICICI Credit & Debit Card. Valid
-                                on
+                                Rs 500 Flat discount on Tx of 10,000 & above with ICICI Credit & Debit Card. Valid on
                                 transactions upto Rs 14999.Select
                                 the offer from “View all offers ”on payment page T&C Apply.
                             </h3>
@@ -275,8 +257,7 @@
                         </div>
                         <div>
                             <h3>
-                                Rs 1000 Instant discount on Tx of 15,000 & above with ICICI Bank Credit & Debit
-                                cards.
+                                Rs 1000 Instant discount on Tx of 15,000 & above with ICICI Bank Credit & Debit cards.
                                 Select the offer from “View all
                                 offers ”on payment page T&C Apply
                             </h3>
@@ -304,8 +285,7 @@
                 <div class="warrenty">
                     <h2>Extended warranty plans starting at ₹2699
                         (Approx ₹225/mo.)</h2>
-                    <h2>Extended protection for your device beyond the manufacturer warranty with coverage against
-                        all
+                    <h2>Extended protection for your device beyond the manufacturer warranty with coverage against all
                         manufacturing defects. <span><a href="">Know more</a></span></h2>
                     <label class="container">1 Year Extended Warranty-Onsitego <span>$2699</span>
                         <input type="checkbox" checked="checked">
@@ -314,7 +294,7 @@
                 </div>
                 <div>
                     <button id="buy" onclick="cart()">BUY NOW</button>
-                    <input type="submit" value="Sign up" id="cart">
+                    <button id="cart" onclick="cart()">ADD TO CART</button>
                 </div>
                 <!-- special notes -->
                 <div class="note">
@@ -382,8 +362,7 @@
                     <ul>
                         <li>Liquid Retina HD Display is more immersive giving awesome clarity defining every details
                         </li>
-                        <li>12 MP Ultra Wide and 12 MP Wide Cameras along with 12 MP front camera enables the device
-                            to
+                        <li>12 MP Ultra Wide and 12 MP Wide Cameras along with 12 MP front camera enables the device to
                             take better photos
                         </li>
                         <li>A13 Bionic Chip Processor lets you install and run as many apps as you like
@@ -395,24 +374,19 @@
                     </p>
                     <p>When you get Apple iPhone 11 online, you get an awesome companion. It features Hexa-Core A13
                         Bionic chip processor with
-                        Third-generation Neural Engine, so you can play hi-end games or run heavy files and carry
-                        out
+                        Third-generation Neural Engine, so you can play hi-end games or run heavy files and carry out
                         tasks without worrying
                         about the performance. The upgraded CPU ensures a seamless response time, allowing you to
                         multitask, play games or run
-                        any heavy task without worrying about the operation speed. With 4GB RAM you can install
-                        multiple
+                        any heavy task without worrying about the operation speed. With 4GB RAM you can install multiple
                         applications and run
-                        them all together without disturbing the speed of the phone. It flaunts a brilliant
-                        combination
+                        them all together without disturbing the speed of the phone. It flaunts a brilliant combination
                         of 12 MP Ultra Wide and
-                        12 MP Wide cameras. It takes awesome shots. It offers with 2x optical zoom out, Digital zoom
-                        up
+                        12 MP Wide cameras. It takes awesome shots. It offers with 2x optical zoom out, Digital zoom up
                         to 5x, Portrait mode
                         with advanced bokeh and Depth Control, Night mode (Wide), Auto image stabilisation, 4K video
                         recording at 24 fps, 30 fps
-                        or 60 fps, etc. The 12 MP front camera offers more natural and personalized options,
-                        delivering
+                        or 60 fps, etc. The 12 MP front camera offers more natural and personalized options, delivering
                         the stunning selfies.
                         Selfies have never been so clear, or so stunning before. It also offers with ƒ/2.2 aperture,
                         Portrait mode with advanced
@@ -424,24 +398,19 @@
                         Proximity sensor, Ambient
                         light sensor. Comes with Siri support as well. It comes with Dual SIM (nano-SIM and eSIM)
                         support. The smartphone
-                        features a striking screen which gives you a 15.49 cm all-screen LCD Display. This Liquid
-                        Retina
+                        features a striking screen which gives you a 15.49 cm all-screen LCD Display. This Liquid Retina
                         HD display offers
                         awesome clarity. Now you can see and do more of what you love, without interruption. The
                         resolution is of 1792 x 828
                         pixels at 326 ppi. Comes with fingerprint-resistant oleophobic coating. Rated IP68 (maximum
                         depth of up to 200 cm up to
-                        30 minutes) under IEC standard 60529. Buy the Apple iPhone 11 which flaunts an amazing
-                        display,
+                        30 minutes) under IEC standard 60529. Buy the Apple iPhone 11 which flaunts an amazing display,
                         brilliant camera and
-                        powerful processor. Available in awesome colours, it flaunts a stylish design which is easy
-                        to
+                        powerful processor. Available in awesome colours, it flaunts a stylish design which is easy to
                         hold and is crafted for
-                        perfect grip. Its 3110 mAh Lithium-ion battery is perfect for continuous working as long as
-                        you
+                        perfect grip. Its 3110 mAh Lithium-ion battery is perfect for continuous working as long as you
                         don't give up, because
-                        it certainly won't. It supports up to 50 percent charge in 30 minutes with 20 Watt adapter
-                        or
+                        it certainly won't. It supports up to 50 percent charge in 30 minutes with 20 Watt adapter or
                         higher (sold separately),
                         wireless charging (works with Qi chargers), charging via USB to computer system or power
                         adapter.</p>
@@ -455,8 +424,7 @@
                 <div class="sp-details-content">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam veritatis eius minus numquam,
                         ipsam est
-                        nemo ut consectetur. Distinctio, laboriosam soluta. Amet officiis at odio similique deleniti
-                        sed
+                        nemo ut consectetur. Distinctio, laboriosam soluta. Amet officiis at odio similique deleniti sed
                         saepe
                         velit!</p>
                 </div>
