--- a/product page/treeviewclassic copy.htm
+++ b/product page/treeviewclassic copy.htm
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/d7bc18a32d.js" crossorigin="anonymous"></script>
     <title>Croma</title>
     <link rel="stylesheet" href="product.css">
+    <link rel="stylesheet" href="style.css">
     <link href="http://fonts.cdnfonts.com/css/gotham" rel="stylesheet">
     <script src="https://kit.fontawesome.com/511a6cb386.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css"
