--- a/landing.html/home.html
+++ b/landing.html/home.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <style>
-    *{
+*{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -1282,25 +1282,25 @@ p{
         window.location.href="iphone12 gold.html";
     }
     function getItem4(){
-        window.location.href="croma.html";
+        window.location.href="mackbookM1.html";
     }
     function getItem5(){
-        window.location.href="croma.html";
+        window.location.href="mackbookpro.html";
     }
     function getItem6(){
-        window.location.href="croma.html";
+        window.location.href="mackbookair.html";
     }
     function getItem7(){
-        window.location.href="croma.html";
+        window.location.href="macpro.html";
     }
     function getItem8(){
-        window.location.href="croma.html";
+        window.location.href="sony.html";
     }
     function getItem9(){
-        window.location.href="croma.html";
+        window.location.href="kodak.html";
     } 
     function getItem10(){
-        window.location.href="croma.html";
+        window.location.href="treeview.html";
     }
     function getItem11(){
         window.location.href="SonyBraviaX85j.html";
