--- a/landing.html/kodak.html
+++ b/landing.html/kodak.html
@@ -93,9 +93,9 @@
             <h4><i class="fas fa-angle-right"></i></h4>
             <h4>Full HD TVs</h4>
             <h4><i class="fas fa-angle-right"></i></h4>
-            <h4>Treeview Classic 60 cm  (62 Inch) </h4>
+            <h4>Kodak 7XPRO Series 80cm (32 Inch </h4>
         </div>
-<!-- 
+        <!-- 
         <br>
         <br>
         <br>
@@ -110,20 +110,19 @@
                     <div id="arrow"><i class="fas fa-angle-up"></i></div>
 
                     <div class="imagepreview1">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637828425/Croma%20Assets/Entertainment/Television/Images/245647_hmh5p4.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037755/Croma%20Assets/Entertainment/Television/Images/246056_a89my8.png/mxw_1125,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview2">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637589289/Croma%20Assets/Entertainment/Television/Images/245647_1_pzdb4f.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037755/Croma%20Assets/Entertainment/Television/Images/246056_1_yxknwj.png/mxw_1125,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview3">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037754/Croma%20Assets/Entertainment/Television/Images/246056_3_ul8n8d.png/mxw_1366,s_webp,f_auto"
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037754/Croma%20Assets/Entertainment/Television/Images/246056_3_ul8n8d.png/mxw_1125,f_auto"
                             alt="">
                     </div>
                     <div class="imagepreview4">
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037755/Croma%20Assets/Entertainment/Television/Images/246056_5_ba4izu.png/mxw_1366,s_webp,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037755/Croma%20Assets/Entertainment/Television/Images/246056_5_ba4izu.png/mxw_1125,f_auto" alt="">
                     </div>
                     <div id="arrow"><i class="fas fa-angle-down"></i></div>
                 </div>
@@ -138,8 +137,7 @@
                 </div>
                 <div id="image">
                     <div>
-                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1637828425/Croma%20Assets/Entertainment/Television/Images/245647_hmh5p4.png/mxw_1366,s_webp,f_auto"
-                            alt="">
+                        <img src="https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037755/Croma%20Assets/Entertainment/Television/Images/246056_a89my8.png/mxw_1125,f_auto" alt="">
                     </div>
                 </div>
                 <!-- bottom part of the image -->
@@ -166,12 +164,12 @@
             </div>
             <div class="productdiscription">
                 <div>
-                    <h1>Treeview Classic 60 cm (23.6 Inches) HD Ready Flat Panel Standard TV (Multiple Picture Mode, IND2401AT, Black)</h1>
+                    <h1>https://d2d22nphq0yz8t.cloudfront.net/88e6cc4b-eaa1-4053-af65-563d88ba8b26/https://media.croma.com/image/upload/v1639037755/Croma%20Assets/Entertainment/Television/Images/246056_a89my8.png/mxw_1125,f_auto</h1>
                 </div>
                 <!-- rating part -->
                 <div id="productid">
                     <div>
-                        <h4>PRODUCT ID: 229927
+                        <h4>PRODUCT ID: 246056
                         </h4>
                     </div>
                     <div class="information">
@@ -188,8 +186,8 @@
                 <!-- end of rating -->
                 <!-- pricing -->
                 <div class="pricing">
-                    <h1>₹8,490.00 <span><span>MRP:
-                                ₹10,900.00</span>
+                    <h1>₹15,490.00<span><span>MRP:
+                                ₹18,999.00</span>
                             (Inclusive of all taxes)
                         </span></h1>
                 </div>
