--- a/landing.html/audio.html
+++ b/landing.html/audio.html
@@ -224,7 +224,7 @@ audio.map(function(ele){
     div2.append(img,div1);
     document.querySelector(".audio").append(div2);
 //    localStorage.setItem(JSON.stringify(''))
-    localStorage.setItem("cartItem",JSON.stringify(audios))
+    localStorage.setItem("cartItem",JSON.stringify(cart))
 
 })
 
