--- a/landing.html/laptop.html
+++ b/landing.html/laptop.html
@@ -231,7 +231,7 @@ laptops.map(function (ele) {
     div2.append(img,div1);
     document.querySelector(".laptop").append(div2);
 //    localStorage.setItem(JSON.stringify(''))
-    localStorage.setItem("cartItem",JSON.stringify(laptops))
+    localStorage.setItem("cartItem",JSON.stringify(cart))
     
 })
 
