--- a/landing.html/tv.html
+++ b/landing.html/tv.html
@@ -14,7 +14,7 @@
     #cart_click{
         cursor: pointer;
     }
-    
+
 
 .add_to_cart{
             border:1px solid white;
@@ -230,7 +230,7 @@ tv.map(function(ele){
     div2.append(img,div1);
     document.querySelector(".tv").append(div2);
 //    localStorage.setItem(JSON.stringify(''))
-    localStorage.setItem("cartItem",JSON.stringify(tvs))
+    localStorage.setItem("cartItem",JSON.stringify(cart))
 })
 
 function addCart(ele){
