--- a/landing.html/mobile.html
+++ b/landing.html/mobile.html
@@ -277,7 +277,7 @@ mobiles.map(function (ele) {
     document.querySelector(".mobile").append(div2);
 
 //    localStorage.setItem(JSON.stringify(''))
-    localStorage.setItem("cartItem",JSON.stringify(mobile))
+    localStorage.setItem("cartItem",JSON.stringify(cart))
     
 })
 
