add functionakity to buy now

--- a/landing.html/audio.html
+++ b/landing.html/audio.html
@@ -219,6 +219,11 @@ audio.map(function(ele){
     buy_now.setAttribute('id',"buy");
 
 
+    buy_now.addEventListener("click",function(){
+        window.location.href="cart.html";
+    })
+
+
 
     div1.append(name,prod_id,price,buy_now,add_cart);
     div2.append(img,div1);
