--- a/landing.html/home.html
+++ b/landing.html/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d7bc18a32d.js" crossorigin="anonymous"></script>
 
-    <title>Document</title>
+    <title>Home Croma</title>
 </head>
 <style>
 *{
