--- a/landing.html/laptop.html
+++ b/landing.html/laptop.html
@@ -224,6 +224,11 @@ laptops.map(function (ele) {
     buy_now.setAttribute('id',"buy");
 
 
+    buy_now.addEventListener("click",function(){
+        window.location.href="cart.html";
+    })
+
+
 
 
 
