--- a/landing.html/cart.html
+++ b/landing.html/cart.html
@@ -29,11 +29,11 @@
         /* img{
             border: 1px solid red;
             width: 300px;
-            padding: 0px;
+            padding: 0px
         } */
         .image{
             border: 1px solid red;
-            
+
         }
     </style>
 </head>
