--- a/landing.html/cart.html
+++ b/landing.html/cart.html
@@ -9,11 +9,24 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <style>
+       .cart_data{
+           margin-bottom: 50px;
+       }
         .cart_data>div{
             border-bottom:1px solid white;
-            width: 80%;
-            margin-left: 100px;
+            width: 60%;
+            margin: auto;
+            /* margin-left: 500px; */
+            justify-content: right;
+            
         }
+.cart_data>div>img{
+ width:180px;
+ /* height:180px;  */
+ /* border: 1px solid red;   */
+ margin-top: 50px;
+ margin-bottom: 50px;
+}
         
         button{
             width: 20%;
@@ -143,6 +156,11 @@ p{
 #cart_click{
     cursor: pointer;
 }
+.cart_data>div{
+    border-radius: 10px;
+    border-top: 1px solid white;
+}
+
     </style>
 </head>
 <body>
@@ -211,6 +229,10 @@ p{
         </div>
     </main-nav>
     <!-- cart body -->
+    <!-- top box -->
+    <div id="topbox">
+
+    </div>
     <div class="cart_data">
 
         <!-- div
