--- a/landing.html/home.html
+++ b/landing.html/home.html
@@ -13,6 +13,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-size: 15px;
    
     
     
@@ -759,6 +760,7 @@ text-overflow: ellipsis;
 .cut{
     text-decoration: line-through;
     margin-left:15px;
+    color: rgb(114, 112, 112);
 }
 .star{
 color:cyan;
