--- a/landing.html/checkout.html
+++ b/landing.html/checkout.html
@@ -213,6 +213,12 @@ p{
     margin-top: 10px;
     /* border: 1px solid red; */
 }
+.check_img{
+    height: 100px;
+    width: 80%;
+    margin: auto;
+    border: 1px solid red;
+}
 
 
 
@@ -312,6 +318,9 @@ p{
             </div>
             <div class="infoe">
                 <div class="check_info">
+                    <div class="check_img" >
+
+                    </div>
                 
                 </div>
                 <div class="check_out">
